--- a/victoriacrosses.html
+++ b/victoriacrosses.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brother's In Arms Memorial</title>
+    <title>Victoria Crosses - Brothers In Arms Memorial</title>
     <link
       rel="icon"
       type="image/png"
@@ -33,6 +33,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- Plyr -->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
   </head>
   <body>
     <section class="nav-con">
@@ -55,17 +57,94 @@
       </nav>
     </section>
 
-    <header class="sub-header history-header">
+    <header class="sub-header victoria-header">
       <div class="header-content">
-        <h1>Where Heroes Rest, History Lives</h1>
-        <p></p>
+        <h1>Honoring the Bravest Soldiers</h1>
+        <p>
+          Indian and Canadian troops displayed extraordinary courage, with
+          several awarded the Victoria Cross, the highest military honor for
+          valor.
+        </p>
       </div>
     </header>
 
     <!-- Main Content -->
+    <main class="victoria-crosses-main">
+      <section class="crosses-london">
+        <div class="content-wrapper">
+          <h2>Crosses from London</h2>
+          <div class="image-container">
+            <img
+              src="images/victoria-cross-medal.jpg"
+              alt="Victoria Cross Medal"
+              class="vc-image"
+            />
+            <img
+              src="images/victoria-cross-medal-2.jpg"
+              alt="Victoria Cross Medal"
+              class="vc-image"
+            />
+            <img
+              src="images/victoria-cross-medal-3.jpg"
+              alt="Victoria Cross Medal"
+              class="vc-image"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="canadian-recipients">
+        <div class="content-wrapper">
+          <h2>Canadian Recipients</h2>
+          <p>69 Canadian soldiers received the Victoria Cross during WW1.</p>
+          <div class="recipient-list">
+            <ul>
+              <li>Name 1 - Details</li>
+              <li>Name 2 - Details</li>
+              <li>Name 3 - Details</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="indian-recipients">
+        <div class="content-wrapper grid-con">
+          <h2 class="col-span-full">Indian Recipients</h2>
+          <div class="recipient-card col-span-full m-col-span-4">
+            <h3>Gabbar Singh Negi</h3>
+            <p>39th Garhwal Rifles, awarded for gallantry.</p>
+          </div>
+          <div class="recipient-card col-span-full m-col-span-4">
+            <h3>Khudadad Khan</h3>
+            <p>129th Baluchis, first Indian Victoria Cross recipient.</p>
+          </div>
+          <div class="recipient-card col-span-full m-col-span-4">
+            <h3>Kulbir Thapa</h3>
+            <p>3rd Gurkha Rifles, recognized for heroism in France.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="hero-of-haifa">
+        <div class="content-wrapper">
+          <h2>The Hero of Haifa</h2>
+          <p>
+            Major Dalpat Singh Shekhawat led the last successful cavalry charge
+            in military history, capturing Haifa from Ottoman forces and saving
+            the Bahá'í leader from execution.
+          </p>
+          <div class="haifa-image">
+            <img
+              src="images/story2.jpg"
+              alt="Haifa Cavalry Charge"
+              class="haifa-img"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- Footer -->
-
     <footer>
       <h1 class="hidden">Footer</h1>
       <div class="footer-content">
@@ -122,7 +201,9 @@
 
     <!-- ------Javascript------ -->
     <script type="module" defer src="js/main.js"></script>
+    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <script src="js/victoriaCrosses.js"></script>
   </body>
 </html>
