--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </nav>
 
       <div class="text-box">
-        <h1>Where Heros Rest, History Lives</h1>
-        <p>Forever Grateful – For Freedom, Sacrifice &amp; Honour</p>
+        <h1>Forever Grateful – For Freedom, Sacrifice &amp; Honour</h1>
+        <p>Preserving the valor that shaped our world</p>
         <a href="donors.html" class="hero-btn">Donate To Preserve History</a>
       </div>
     </section>
