--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
     <header class="sub-header about-header">
       <div class="header-content">
-        <h1>About</h1>
+        <h1>About Us</h1>
         <p>
           Honoring the sacrifices of soldiers who fought for freedom and
           humanity.
