--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
     <!-- Video -->
     <div id="video-section" class="grid-con">
-      <h2 class="hidden">Video Section</h2>
+      <h2 class="col-span-full m-col-span-2">Explore Our Journey!</h2>
       <section
         id="player-container"
-        class="col-span-full m-col-start-2 m-col-end-12 l-col-start-3 l-col-end-11"
+        class="col-span-full m-col-start-4 m-col-end-13"
       >
         <h3 class="hidden">Video</h3>
         <video class="player" controls preload="metadata">
