--- a/history_stories.html
+++ b/history_stories.html
@@ -237,7 +237,7 @@
     </footer>
 
     <!-- ------Javascript------ -->
-    <script type="module" defer src="js/main.js"></script>
+    <script type="module" defer src="js/history_stories.js"></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
