--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </footer>
 
     <!-- Javascript -->
-    <script type="module" defer src="js/main.js"></script>
+    <script type="module" defer src="js/home.js"></script>
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
   </body>
 </html>
