--- a/history_stories.html
+++ b/history_stories.html
@@ -130,7 +130,7 @@
       </section>
 
       <!-- Personal Stories -->
-      <section class="section personal-stories">
+      <section id="personal-stories" class="section personal-stories">
         <h2>Personal Stories from Soldiers</h2>
         <div class="stories-grid">
           <div class="story-card">
@@ -241,68 +241,5 @@
     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <!-- <script>
-      // GSAP Animations
-      gsap.registerPlugin(ScrollTrigger);
-
-      gsap.from(".history-header h1", {
-        opacity: 0,
-        y: -50,
-        duration: 1.5,
-        ease: "power3.out",
-      });
-
-      gsap.from(".history-header p", {
-        opacity: 0,
-        y: 50,
-        duration: 1.5,
-        delay: 0.5,
-        ease: "power3.out",
-      });
-
-      gsap.from(".timeline-item", {
-        scrollTrigger: {
-          trigger: ".conflict-history",
-          start: "top 80%",
-        },
-        opacity: 0,
-        y: 50,
-        stagger: 0.3,
-        duration: 1,
-      });
-
-      gsap.from(".event-card", {
-        scrollTrigger: {
-          trigger: ".key-events",
-          start: "top 80%",
-        },
-        opacity: 0,
-        x: -50,
-        stagger: 0.3,
-        duration: 1,
-      });
-
-      gsap.from(".story-card", {
-        scrollTrigger: {
-          trigger: ".personal-stories",
-          start: "top 80%",
-        },
-        opacity: 0,
-        y: 50,
-        stagger: 0.3,
-        duration: 1,
-      });
-
-      gsap.from(".letter-card", {
-        scrollTrigger: {
-          trigger: ".soldier-letters",
-          start: "top 80%",
-        },
-        opacity: 0,
-        x: 50,
-        stagger: 0.3,
-        duration: 1,
-      });
-    </script> -->
   </body>
 </html>
