--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
 
       <div class="see-more-container col-span-full">
-        <a href="#" class="see-more-link">
+        <a href="history_stories.html#personal-stories" class="see-more-link">
           See More ...
           <i class="fa fa-chevron-right"></i>
           <i class="fa fa-chevron-right"></i>
@@ -146,100 +146,18 @@
       </div>
     </section>
 
-    <!-- ____________campus--------- -->
-    <section class="campus">
-      <h1>The Honorable History</h1>
-      <p>
-        us architecto at placeat excepturi autem obcaecati vero sint consequatur
-        vel.
-      </p>
+    <!-- Lastest News Announcements -->
 
-      <div class="row">
-        <div class="campus-col">
-          <img src="images/soldier_indian_reference.jpg" />
-          <div class="layer">
-            <h3>swords reflect their role in the British Indian Army</h3>
-          </div>
-        </div>
-        <div class="campus-col">
-          <img src="images/soldier_canadian_somme.jpg" />
-          <div class="layer">
-            <h3>cavalry or infantry units known for close combat</h3>
-          </div>
-        </div>
-        <div class="campus-col">
-          <img src="images/soldier_indian_reference2.jpg" />
-          <div class="layer">
-            <h3>soldiers march World War I</h3>
-          </div>
-        </div>
-      </div>
+    <section>
+      <h1>Lastest News Announcements</h1>
+      <p>make it dynamic</p>
     </section>
 
-    <!-- ------------facilities------------- -->
+    <!-- Blog -->
 
-    <section class="facilities">
-      <h1>facilities</h1>
-      <p>usdygvcy aisduv gcaisyhgcdf vcyuehbfq oeubhqehbf</p>
-
-      <div class="row">
-        <div class="facilities-col">
-          <img src="images/Memorial-Site-Plan.jpeg" />
-          <h3>world class library donation</h3>
-          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
-        </div>
-        <div class="facilities-col">
-          <img src="images/soldier_indian_reference.jpg" />
-          <h3>world class basketball donation</h3>
-          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
-        </div>
-        <div class="facilities-col">
-          <img src="images/drone-shot.JPG" />
-          <h3>world class tasty donation</h3>
-          <p>uhdevcouqcd uoqwdvcoquwdhc qwudcvqwoudc qwudcvqwoudcv</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- ----------testimonials--------- -->
-
-    <section class="testimonials">
-      <h1>Patience Experience</h1>
-      <p>wuiydevcbw wisaudgbwa qiuwdgba qadiub</p>
-
-      <div class="row">
-        <div class="testimonials-col">
-          <img src="images/user1.jpg" />
-          <div>
-            <h3>christien berkely</h3>
-            <p>
-              isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc
-            </p>
-            <!-- <h3>christien berkely</h3> -->
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-o"></i>
-          </div>
-        </div>
-
-        <div class="testimonials-col">
-          <img src="images/user2.jpg" />
-          <div>
-            <h3>abdulah kader</h3>
-            <p>
-              isbcwiuasdbc wiudbiaudbc iausdcbaiubd aisubc aius c iausbcaisubc
-            </p>
-            <!-- <h3>abdulah kader</h3> -->
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star-half-o"></i>
-          </div>
-        </div>
-      </div>
+    <section>
+      <h1>Blog</h1>
+      <p>make it dynamic</p>
     </section>
 
     <!-- Call to Action -->
