--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- Plyr -->
     <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+     <!-- Javascript -->
+     
+     <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+     <script type="module" defer src="js/home.js"></script>
   </head>
   <body>
     <section class="header">
@@ -148,14 +149,14 @@
 
     <!-- Lastest News Announcements -->
 
-    <section>
+    <section id="LNews">
       <h1>Lastest News Announcements</h1>
       <p>make it dynamic</p>
     </section>
 
     <!-- Blog -->
 
-    <section>
+    <section id="blogSection">
       <h1>Blog</h1>
       <p>make it dynamic</p>
     </section>
@@ -250,8 +251,6 @@
       </div>
     </footer>
 
-    <!-- Javascript -->
-    <script type="module" defer src="js/home.js"></script>
-    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+   
   </body>
 </html>
