Update On News, Blog sections and Article page.
News Section Done, Blog section done and created an Article.HTML which will be a dynamic page for blog post

--- a/index.html
+++ b/index.html
@@ -147,19 +147,145 @@
       </div>
     </section>
 
-    <!-- Lastest News Announcements -->
-
-    <section id="LNews">
-      <h1>Lastest News Announcements</h1>
-      <p>make it dynamic</p>
-    </section>
-
     <!-- Blog -->
+    <section id="blogSection" class="grid-con">
+      <h1 class="col-span-full">Latest Blog Posts</h1>
+      
+      <div class="blog-grid col-span-full">
+        <article class="blog-card col-span-full m-col-span-6">
+          <div class="blog-image">
+            <img src="images/clay-sculpture.jpeg" alt="The Role of Indian Soldiers in WW1">
+            <div class="blog-category">History</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-meta">
+              <span class="blog-date">March 20, 2025</span>
+              <span class="blog-author">By Dr. Sarah Johnson</span>
+            </div>
+            <h3>The Role of Indian Soldiers in WW1</h3>
+            <p>Exploring the significant contributions and sacrifices of Indian soldiers during World War I, and their lasting impact on military history.</p>
+            <div class="blog-footer">
+              <a href="article.html" class="read-more">Read Article <i class="fa fa-arrow-right"></i></a>
+              <div class="blog-stats">
+                <span><i class="fa fa-clock-o"></i> 5 min read</span>
+                <span><i class="fa fa-comments"></i> 12 comments</span>
+              </div>
+            </div>
+          </div>
+        </article>
 
-    <section id="blogSection">
-      <h1>Blog</h1>
-      <p>make it dynamic</p>
+        <article class="blog-card col-span-full m-col-span-6">
+          <div class="blog-image">
+            <img src="images/clay-sculpture.jpeg" alt="Preserving Military Heritage">
+            <div class="blog-category">Heritage</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-meta">
+              <span class="blog-date">March 18, 2025</span>
+              <span class="blog-author">By Michael Chen</span>
+            </div>
+            <h3>Preserving Military Heritage</h3>
+            <p>How modern technology is helping us preserve and share the stories of our military heritage for future generations.</p>
+            <div class="blog-footer">
+              <a href="article.html" class="read-more">Read Article <i class="fa fa-arrow-right"></i></a>
+              <div class="blog-stats">
+                <span><i class="fa fa-clock-o"></i> 4 min read</span>
+                <span><i class="fa fa-comments"></i> 8 comments</span>
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <article class="blog-card col-span-full m-col-span-6">
+          <div class="blog-image">
+            <img src="images/clay-sculpture.jpeg" alt="Stories from the Front Line">
+            <div class="blog-category">Stories</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-meta">
+              <span class="blog-date">March 15, 2025</span>
+              <span class="blog-author">By Priya Patel</span>
+            </div>
+            <h3>Stories from the Front Line</h3>
+            <p>Personal accounts and letters from soldiers that reveal the human side of war and the bonds formed between Indian and Canadian troops.</p>
+            <div class="blog-footer">
+              <a href="article.html" class="read-more">Read Article <i class="fa fa-arrow-right"></i></a>
+              <div class="blog-stats">
+                <span><i class="fa fa-clock-o"></i> 6 min read</span>
+                <span><i class="fa fa-comments"></i> 15 comments</span>
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <article class="blog-card col-span-full m-col-span-6">
+          <div class="blog-image">
+            <img src="images/clay-sculpture.jpeg" alt="The Impact of Military Memorials">
+            <div class="blog-category">Memorials</div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-meta">
+              <span class="blog-date">March 12, 2025</span>
+              <span class="blog-author">By David Thompson</span>
+            </div>
+            <h3>The Impact of Military Memorials</h3>
+            <p>Understanding how military memorials serve as important cultural and historical landmarks in preserving our shared history.</p>
+            <div class="blog-footer">
+              <a href="article.html" class="read-more">Read Article <i class="fa fa-arrow-right"></i></a>
+              <div class="blog-stats">
+                <span><i class="fa fa-clock-o"></i> 7 min read</span>
+                <span><i class="fa fa-comments"></i> 10 comments</span>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
     </section>
+
+    <!-- Latest News Announcements -->
+    <section id="LNews" class="grid-con">
+      <h1 class="col-span-full">Latest News Announcements</h1>
+      
+      <div class="news-grid col-span-full">
+        <article class="news-card col-span-full m-col-span-4">
+          <div class="news-image">
+            <img src="images/contact-flower-img.jpg" alt="Memorial Groundbreaking Ceremony">
+            <div class="news-date">March 15, 2025</div>
+          </div>
+          <div class="news-content">
+            <h3>Memorial Groundbreaking Ceremony</h3>
+            <p>Join us for the historic groundbreaking ceremony of the Brothers in Arms Memorial. This momentous event will mark the beginning of construction for our permanent tribute.</p>
+            <a href="#" class="read-more">Read More <i class="fa fa-arrow-right"></i></a>
+          </div>
+        </article>
+
+        <article class="news-card col-span-full m-col-span-4">
+          <div class="news-image">
+            <img src="images/clay-sculpture.jpeg" alt="Educational Program Launch">
+            <div class="news-date">March 10, 2025</div>
+          </div>
+          <div class="news-content">
+            <h3>Educational Program Launch</h3>
+            <p>We're excited to announce the launch of our new educational program, bringing the stories of Indian and Canadian soldiers to schools across both nations.</p>
+            <a href="#" class="read-more">Read More <i class="fa fa-arrow-right"></i></a>
+          </div>
+        </article>
+
+        <article class="news-card col-span-full m-col-span-4">
+          <div class="news-image">
+            <img src="images/donors-hero.jpeg" alt="Donation Milestone">
+            <div class="news-date">March 5, 2025</div>
+          </div>
+          <div class="news-content">
+            <h3>Donation Milestone Reached</h3>
+            <p>Thanks to the generous support of our community, we've reached a significant milestone in our fundraising campaign. Your contributions are making history.</p>
+            <a href="#" class="read-more">Read More <i class="fa fa-arrow-right"></i></a>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
 
     <!-- Call to Action -->
 
