Update on Crosses
Updated images on Victoria crosses

--- a/victoriacrosses.html
+++ b/victoriacrosses.html
@@ -78,7 +78,7 @@
           <h2>Crosses from London</h2>
           <div class="image-container">
             <img
-              src="images/victoria-cross-medal.jpg"
+              src="images/victoria-cross-medal-3.png"
               alt="Victoria Cross Medal"
               class="vc-image"
             />
@@ -88,7 +88,7 @@
               class="vc-image"
             />
             <img
-              src="images/victoria-cross-medal-3.jpg"
+              src="images/victoria-cross-medal-3.png"
               alt="Victoria Cross Medal"
               class="vc-image"
             />
